Fixed error where all pages would be displayed in menu.

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-categories: [main]
+sass:
+    sass_dir: _scss
+    style: :compressed
 
-defaults:
-    -
-        scope:
-            layout: "pages"
-        values:
-            categories: [main]
+categories: [menu]
+
